test/compilable/extra-files/makedeps_a.d
module makedeps_a;

void a_func() {}
