test/fail_compilation/fail333.d
void test( typeof(test) p) { }

